--- a/scss/utilities/_grid.scss
+++ b/scss/utilities/_grid.scss
@@ -1,14 +1,13 @@
 //extracting burbon-neat grid classes for non-silent implimentation (adding classes to markup)
 
 .outer-container {
-	@include outer-container;
+  @include outer-container;
 }
 
 @for $i from 1 through $grid-columns {
   .col-#{$i} { @include span-columns($i); }
 }
 
-
 .omega {
-	@include omega();
+  @include omega;
 }
