--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import 'utilities/reset';
 @import 'utilities/vars';
 @import 'utilities/mixins';
+@import 'utilities/helpers';
 @import 'utilities/typography';
 @import 'utilities/grid';
 @import 'utilities/background';
