--- a/scss/elements/_lists.scss
+++ b/scss/elements/_lists.scss
@@ -6,23 +6,24 @@
   &-bullet {
     list-style-type: none;
     padding-left: 0;
+  }
 
-    li {
-      margin-bottom: 13px;
-      padding-left: 20px;
-      position: relative;
+  &-bullet--item {
+    margin-bottom: 13px;
+    padding-left: 20px;
+    position: relative;
 
-      @include media(mobile) {
-        font-size: 15px;
-      }
+    @include media(mobile) {
+      font-size: 15px;
+    }
 
-      &:before {
-        color: $great-blue;
-        content: '\25CF';
-        left: 0;
-        margin-right: 10px;
-        position: absolute;
-      }
+    &:before {
+      color: $great-blue;
+      content: '\25CF';
+      left: 0;
+      margin-right: 10px;
+      position: absolute;
     }
   }
 }
+
