--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'utilities/vars';
 @import 'utilities/mixins';
 @import 'utilities/helpers';
+@import 'utilities/placeholders';
 @import 'utilities/typography';
 @import 'utilities/grid';
 @import 'utilities/background';
@@ -15,4 +16,7 @@
 @import 'elements/headings';
 @import 'elements/lists';
 @import 'elements/buttons';
+
+//components
+@import 'components/navigation';
 
