--- a/scss/neat/_grid-settings.scss
+++ b/scss/neat/_grid-settings.scss
@@ -6,5 +6,9 @@ $grid-columns: 12;
 $max-width: 1200px;
 
 // Define your breakpoints
-$mob: new-breakpoint(min-width 767px 12);
-$tab: new-breakpoint(min-width 767px 12);
+//$mob: new-breakpoint(min-width 767px 12);
+//$tab: new-breakpoint(min-width 767px 12);
+
+$mobile: max-width 767px;
+$tablet: max-width 959px min-width 768px;
+
