--- a/scss/utilities/_typography.scss
+++ b/scss/utilities/_typography.scss
@@ -116,7 +116,15 @@ blockquote {
 }
 
 hr {
-  background: $purple;
+  background-color: $purple;
+  border: 0;
+  display: block;
+  height: 1px;
+  padding: 0;
+
+  &.white {
+    @extend %transparent-background;
+  }
 }
 
 a {
