--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -16,10 +16,13 @@ $light-grey: #dce0df;
 $purple: #4f0b7b;
 $mid-blue: #00549f;
 $aqua: #007ea3;
+$light-aqua: #8ae2fb;
 $great-red: #e41f13;
-$dark-navy: #110b29;
-$blue: #181f58;
+$dark-navy: #160d37;
+$dark-blue: #181f58;
 $light-blue: #00549f;
+$border-color: rgba(250, 250, 250, .5);
+$border-color-fallback: #756e8f;
 
 // LINK
 $link-colour: $mid-blue;
@@ -67,7 +70,7 @@ $backgrounds: (
   'aqua' $aqua,
   'great-blue' $great-blue,
   'dark-navy' $dark-navy,
-  'blue' $blue,
+  'dark-blue' $dark-blue,
   'light-blue' $light-blue
 );
 
