--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -32,6 +32,7 @@
   @extend %h4;
   border: 0;
   box-shadow: none;
+  cursor: pointer;
   display: inline-block;
   font-family: $brand-font-family;
   font-weight: 900;
