--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@
 @import 'elements/headings';
 @import 'elements/lists';
 @import 'elements/buttons';
+@import 'elements/icons';
 
 //components
 @import 'components/navigation';
