--- a/scss/utilities/_helpers.scss
+++ b/scss/utilities/_helpers.scss
@@ -126,6 +126,10 @@
   display: none;
 }
 
+.show {
+  display: block;
+}
+
 .float--right   { float: right; }
 .float--left    { float: left; }
 .float--none    { float: none; }
