--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -1,6 +1,6 @@
 $font-family-url: 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
 @import url($font-family-url);
-$brand-font-family: 'Roboto', sans-serif;
+$brand-font-family: 'Roboto', arial, helvetica, sans-serif;
 
 $base-spacing-unit: 20px;
 $half-spacing-unit: $base-spacing-unit / 2;
@@ -19,10 +19,11 @@ $aqua: #007ea3;
 $light-aqua: #8ae2fb;
 $great-red: #e41f13;
 $dark-navy: #160d37;
-$dark-blue: #181f58;
+$dark-blue: #132965;
 $light-blue: #00549f;
 $border-color: rgba(250, 250, 250, .5);
 $border-color-fallback: #756e8f;
+$black: #000;
 
 // LINK
 $link-colour: $mid-blue;
@@ -43,21 +44,28 @@ $body-background-color: $white;
 // BUTTONS
 $button-blue-bg-color: $mid-blue;
 $button-blue-bg-color--visited: $mid-blue;
-$button-blue-bg-color--hover: $mid-blue;
+$button-blue-bg-color--hover: $dark-blue;
 $button-blue-color: $white;
 $button-blue-color-hover: $white;
 $button-blue-outline: 0;
+
+$button-red-bg-color: $flag-red;
+$button-red-bg-color--visited: $mid-blue;
+$button-red-bg-color--hover: $mid-blue;
+$button-red-color: $white;
+$button-red-color-hover: $white;
+$button-red-outline: 0;
 
 $button-border-bg-color: transparent;
 $button-border-bg-color--visited: transparent;
 $button-border-bg-color--hover: transparent;
 $button-border-color: $mid-blue;
-$button-border-color-hover: $grey;
-$button-border-outline: 1px solid $mid-blue;
+$button-border-color-hover: $aqua;
+$button-border-outline: 0;
 
 $backgrounds: (
   'great-blue' $great-blue,
-  'flag-red' $great-red,
+  'flag-red' $flag-red,
   'stone' $stone,
   'white' $white,
   'grey' $grey,
@@ -69,11 +77,14 @@ $backgrounds: (
   'great-blue' $great-blue,
   'dark-navy' $dark-navy,
   'dark-blue' $dark-blue,
-  'light-blue' $light-blue
+  'light-blue' $light-blue,
+  'light-aqua' $light-aqua,
+  'great-red' $great-red
 );
 
 $button: (
   'blue' $button-blue-bg-color $button-blue-bg-color--visited $button-blue-bg-color--hover $button-blue-color $button-blue-color-hover null $button-blue-outline,
+  'red' $button-red-bg-color $button-red-bg-color--visited $button-red-bg-color--hover $button-red-color $button-red-color-hover null $button-red-outline,
   'border' $button-border-bg-color $button-border-bg-color--visited $button-border-bg-color--hover $button-border-color $button-border-color-hover null $button-border-outline,
 );
 
