--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,27 +1,124 @@
 .footer {
   @extend %anchor-white;
   font-size: $small;
+  padding-top: 40px;
 
   &-logo {
     width: 200px;
+
+    @include media($mobile) {
+      width: 150px;
+    }
   }
 
   &-links {
+    padding-left: 10px;
+
     a {
       &:hover {
         border-bottom: 1px dashed $white;
         padding-bottom: 5px;
       }
     }
+
+    &--border {
+      @extend %transparent-color;
+
+      @include media($mobile) {
+        border: {
+          left: 1px;
+          style: solid;
+        }
+        padding-left: 20px;
+      }
+    }
   }
 
   &-middle-section {
     @extend %transparent-color;
-
     border: {
       left: 1px;
       right: 1px;
       style: solid;
     }
+    padding-left: 20px;
+
+    @include media($mobile) {
+      border: 0;
+      padding-left: 0;
+    }
+  }
+
+  &-section {
+    @include span-columns(6 of 12);
+
+    @include media($mobile) {
+      @include span-columns(12 of 12);
+      border-bottom: 1px solid;
+      color: $border-color-fallback;
+      color: $border-color;
+      padding: 20px 0;
+
+      .col-8,
+      .col-4 {
+        @include span-columns(6 of 12);
+      }
+    }
+  }
+
+  &-section-right {
+    li {
+      padding-left: 40px;
+
+      @include media($mobile) {
+        padding-left: 0;
+      }
+    }
+
+    @include media($mobile) {
+      margin-bottom: 10px;
+    }
+  }
+
+  &-copy {
+    text-align: right;
+
+    @include media($mobile) {
+      @include span-columns(12 of 12);
+      padding: 10px 0 20px;
+      text-align: center;
+    }
+  }
+
+  .list-separators {
+
+    li {
+      @include media($mobile) {
+        @include span-columns(6 of 12);
+
+        &:after {
+          content: '';
+        }
+      }
+    }
+  }
+
+  .footer-bottom {
+    @extend %transparent-color;
+    border: {
+      top: 1px solid;
+    }
+    margin-top: 60px;
+    padding-bottom: 20px;
+    padding-top: 10px;
+
+    @include media($mobile) {
+      border: 0;
+      margin-top: 0;
+    }
+  }
+
+  @include media($mobile) {
+    padding-top: 0;
   }
 }
