--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -51,7 +51,7 @@ $button-blue-outline: 0;
 
 $button-red-bg-color: $flag-red;
 $button-red-bg-color--visited: $mid-blue;
-$button-red-bg-color--hover: $mid-blue;
+$button-red-bg-color--hover: $dark-blue;
 $button-red-color: $white;
 $button-red-color-hover: $white;
 $button-red-outline: 0;
