--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -39,7 +39,7 @@
     }
 
     &-menu {
-      overflow-x: scroll;
+      overflow-x: hidden;
       padding-right: 70px;
       white-space: nowrap;
 
@@ -206,6 +206,10 @@
           right: 0;
         }
       }
+    }
+
+    &:focus {
+      background-color: $dark-navy;
     }
 
     @include media($mobile) {
