--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,10 +13,12 @@
 
 
 //elements
+@import 'elements/links';
 @import 'elements/headings';
 @import 'elements/lists';
 @import 'elements/buttons';
 @import 'elements/icons';
+@import 'elements/forms';
 
 //components
 @import 'components/navigation';
