--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -19,10 +19,13 @@
         color: $color-hover;
       }
 
-      &:focus,
       &:active {
         background-color: $aqua;
         outline: 0;
+      }
+      
+      &:focus {
+        @include button-focus;
       }
     }
   }
