--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -24,6 +24,7 @@ $light-blue: #00549f;
 $border-color: rgba(250, 250, 250, .5);
 $border-color-fallback: #756e8f;
 $black: #000;
+$focus-yellow: #ffbf47;
 
 // LINK
 $link-colour: $mid-blue;
