Lint: Satisfying complaints about pseudo-selector positioning

--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -1,5 +1,7 @@
-input:focus,
-textarea:focus,
-select:focus {
-  outline: 3px solid $focus-yellow;
+input,
+textarea,
+select {
+  &:focus {
+    outline: 3px solid $focus-yellow;
+  }
 }
