Update: Removing backgrounds on focus states to leave only outline

--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -22,11 +22,9 @@
     }
 
     &-link {
-      padding: 8px 11px 7px;
-
-      &:focus {
-        @include navigation-focus;
-      }
+      margin: 3px;
+      outline: 3px solid $light-blue;
+      padding: 5px 8px 4px;
 
       &:hover,
       &--active {
@@ -39,6 +37,10 @@
           top: 0;
           width: 100%;
         }
+      }
+      
+      &--secondary {
+        outline: 3px solid $dark-blue;
       }
     }
 
@@ -187,10 +189,6 @@
     right: 0;
     top: 0;
 
-    &:focus {
-      @include navigation-focus;
-    }
-
     .icon {
       height: 12px;
       line-height: 15px;
@@ -239,7 +237,6 @@
   }
 
   &-logo {
-    @include logo-in-link;
     padding: 17px 0 11px;
 
     @include media($mobile) {
