--- a/scss/elements/_links.scss
+++ b/scss/elements/_links.scss
@@ -2,7 +2,7 @@ a {
   text-decoration: none;
 
   &:focus {
-    @include link-focus;
+    outline: 3px solid $focus-yellow;
   }
 }
 
@@ -11,10 +11,6 @@ a {
   border-bottom: 1px solid;
   color: $mid-blue;
   text-decoration: none;
-
-  &:focus {
-    @include link-focus;
-  }
 
   &:hover {
     border-bottom: 1px dashed;
@@ -33,10 +29,6 @@ a {
 
 .logo-hmg {
   display: block;
-
-  &:focus {
-    @include logo-in-link;
-  }
 
   img {
     display: block;
