--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -60,10 +60,10 @@
   }
 
   &-toggle {
-    padding: 28px 0 25px;
+    padding: 28px 0 50px;
 
     &-item {
-      padding: 13px 12px 0;
+      padding: 13px 0 0;
       position: relative;
 
       &:first-child {
@@ -146,6 +146,14 @@
       }
     }
 
+    &-services-section {
+      padding-left: 10px;
+
+      @include media($mobile) {
+        padding-left: 0;
+      }
+    }
+
     .outer-container {
       @include media($mobile) {
         margin: 0;
@@ -167,10 +175,12 @@
         left: 1px;
         style: solid;
       }
-      padding-left: 15px;
+      min-height: 100px;
+      padding-left: 20px;
 
       @include media($mobile) {
         border: 0;
+        min-height: inherit;
         padding: 0;
       }
     }
@@ -195,6 +205,14 @@
       width: 25px;
     }
 
+    @include media($mobile) {
+      background: transparent;
+      border: 1px solid;
+      border-color: $border-color-fallback;
+      border-color: $border-color;
+      top: -50px;
+    }
+
     &:hover,
     &--open {
       background-color: $dark-navy;
@@ -210,14 +228,6 @@
           right: 0;
         }
       }
-    }
-
-    @include media($mobile) {
-      background: transparent;
-      border: 1px solid;
-      border-color: $border-color-fallback;
-      border-color: $border-color;
-      top: -50px;
     }
   }
 
@@ -260,6 +270,35 @@
 
     &:after {
       display: none;
+    }
+  }
+
+  &-login {
+    @include media($mobile) {
+
+      li {
+        padding-right: 0;
+
+        .icon {
+          margin-right: 0;
+        }
+
+        &:after {
+          content: none;
+        }
+      }
+
+      a {
+        padding: 0;
+      }
+    }
+
+
+    a {
+
+      &:hover {
+        @extend %login-active;
+      }
     }
   }
 }
