--- a/scss/elements/_icons.scss
+++ b/scss/elements/_icons.scss
@@ -12,4 +12,13 @@
     repeat: no-repeat;
   };
   display: inline-block;
+
+  &--left {
+    float: left;
+    height: 21px;
+    left: 0;
+    margin-right: 10px;
+    position: relative;
+    width: 22px;
+  }
 }
