--- a/scss/elements/_lists.scss
+++ b/scss/elements/_lists.scss
@@ -9,7 +9,7 @@
     padding-left: 20px;
     position: relative;
 
-    @include media(mobile) {
+    @include media($mobile) {
       font-size: 15px;
     }
 
@@ -25,6 +25,12 @@
   &-inline {
     li {
       display: inline-block;
+
+      @include media($mobile) {
+        &.hide-mobile {
+          display: none;
+        }
+      }
     }
   }
 
