--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -9,7 +9,7 @@ $half-spacing-unit: $base-spacing-unit / 2;
 $great-blue: #1e1348;
 $flag-red: #b00d23;
 $stone: #dfd5c5;
-$white: #fafafa;
+$dark-white: #fafafa;
 $grey: #333;
 $mid-grey: #999;
 $light-grey: #dce0df;
@@ -25,6 +25,7 @@ $border-color: rgba(250, 250, 250, .5);
 $border-color-fallback: #756e8f;
 $black: #000;
 $focus-yellow: #ffbf47;
+$white: #fff;
 
 // LINK
 $link-colour: $mid-blue;
@@ -40,7 +41,7 @@ $small: 15px;
 $xsmall: 14px;
 
 //BODY
-$body-background-color: $white;
+$body-background-color: $dark-white;
 
 // BUTTONS
 $button-blue-bg-color: $mid-blue;
@@ -68,7 +69,7 @@ $backgrounds: (
   'great-blue' $great-blue,
   'flag-red' $flag-red,
   'stone' $stone,
-  'white' $white,
+  'dark-white' $dark-white,
   'grey' $grey,
   'mid-grey' $mid-grey,
   'light-grey' $light-grey,
@@ -79,7 +80,8 @@ $backgrounds: (
   'dark-blue' $dark-blue,
   'light-blue' $light-blue,
   'light-aqua' $light-aqua,
-  'great-red' $great-red
+  'great-red' $great-red,
+  'white' $white
 );
 
 $button: (
@@ -90,6 +92,8 @@ $button: (
 
 $icons: (
   'menu' 'menu.svg',
+  'sign-in' 'signin.svg',
+  'sign-out' 'signout.svg'
 );
 
 $image-path: '/images/';
