--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -13,7 +13,9 @@ html
     script.
       document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled')
     include ../layout/header
-    h1 hey!
+    .outer-container(id="content")
+      h1 hey!
+    include ../layout/footer
     script(src="js/jquery.js")
     script(src="js/navigation.js")
     script(src="js/sso.js")
