addde footer template

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -14,6 +14,7 @@ html
       document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled')
     include ../layout/header
     h1 hey!
+    include ../layout/footer
     script(src="js/jquery.js")
     script(src="js/navigation.js")
     script(src="js/sso.js")
