create TabSwitcher component

--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -25,3 +25,5 @@
 @import 'components/footer';
 @import 'components/steps';
 
+// new components
+@import '../components/TabSwitcher/styles/_TabSwitcher';
