--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -1,12 +1,12 @@
 mixin codeblock(lang, code)
   .tabswitcher
     nav.tabswitcher__nav
-      a.tabswitcher__btn Example
-      a.tabswitcher__btn Source code
+      a.tabswitcher__btn(data-tabswitcher-pane='example') Example
+      a.tabswitcher__btn(data-tabswitcher-pane='source') Source code
     .tabswitcher__content
-      .tabswitcher__pane.tabswitcher__example
+      .tabswitcher__pane.tabswitcher__example(data-tabswitcher-pane='example')
         div !{code}
-      .tabswitcher__pane.tabswitcher__source
+      .tabswitcher__pane.tabswitcher__source(data-tabswitcher-pane='source')
         pre
           code(class=`language-${lang}`)
             div| #{code}
@@ -18,6 +18,7 @@ html
     meta(name='description' content='')/
     meta(name='viewport' content='width=device-width, initial-scale=1')/
     title EIG Styleguide
+    link(rel="icon", type="image/png", href="images/favicon.ico")
     link(rel='apple-touch-icon' href='apple-touch-icon.png')/
     // Place favicon.ico in the root directory
     link(rel='stylesheet' href='styles/main.css')/
@@ -65,8 +66,9 @@ html
 
     include ../layout/footer
     script(src="prismjs/prism.js")
-    script(src="/static/vendor/js/jquery.js")
-    script(src="/static/vendor/js/navigation.js")
-    script(src="/static/vendor/js/sso.js")
-    script(src="/static/vendor/js/sso.js")
-    script(src="/pages/home.js")
+    script(src="/vendor/js/jquery.js")
+    script(src="/vendor/js/navigation.js")
+    script(src="/vendor/js/sso.js")
+    script(src="/vendor/js/sso.js")
+    script(src="/scripts/pages/core.js")
+    script(src="/scripts/pages/home.js")
